# ld-decode

./: .gitignore  .gitmodules  500mhz.raw  ABOUT  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  FEATURES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  Makefile.orig  NewFile2.csv  README  README.md  README_VHS.md  README_gen_chroma_vid_scripts.md  README_pypi.md  SESSION_LOG_OSCILLOSCOPE_FIXES.md  VERSION_REPORTING.md  _build_hooks.py  advanced_flags.md  audio-decoder.cxx  audio-decoder10.cxx  audio-g2.cxx  build  cd-decoder.py  comb-4fsc.cxx  comb-ntsc.cxx  comb-pal.cxx  comb-pal.py  comb-tf-experiments.ipynb  comb-tf.py  comb-tf2.ipynb  comb.cxx  comb.py  (+162 more)
prototypes/ld-process-efm/: .gitignore  CMakeLists.txt  README.md  main.cpp
prototypes/ld-process-efm/Datatypes/: audio.cpp  f1frame.h  f3frame.h  section.cpp  sector.h
prototypes/ld-process-efm/Decoders/: c1circ.h  f1toaudio.cpp  f1todata.cpp  f3tof2frames.cpp  syncf3frames.cpp  syncf3frames.h
tools/efm-decoder/: .gitignore  CMakeLists.txt  README.md
tools/ld-analyse/: CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  appicon.rc  blacksnranalysisdialog.cpp  blacksnranalysisdialog.h  blacksnranalysisdialog.ui  busydialog.cpp  busydialog.h  busydialog.ui  capturequalityindexdialog.cpp  capturequalityindexdialog.h  capturequalityindexdialog.ui  chromadecoderconfigdialog.cpp  chromadecoderconfigdialog.h  chromadecoderconfigdialog.ui  closedcaptionsdialog.cpp  closedcaptionsdialog.h  closedcaptionsdialog.ui  configuration.cpp  configuration.h  dropoutanalysisdialog.cpp  dropoutanalysisdialog.h  dropoutanalysisdialog.ui  frameqlabel.cpp  frameqlabel.h  ld-analyse-resources.qrc  ld-analyse.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ntscdialog.cpp  ntscdialog.h  ntscdialog.ui  oscilloscopedialog.cpp  oscilloscopedialog.h  oscilloscopedialog.ui  (+30 more)
tools/ld-analyse/install/: ld-analyse.desktop
tools/ld-chroma-decoder/: CMakeLists.txt  README.md  comb.cpp  comb.h  componentframe.cpp  componentframe.h  decoder.cpp  decoder.h  decoderpool.cpp  decoderpool.h  filterthread.cpp  filterthread.h  framecanvas.cpp  framecanvas.h  iirfilter.h  ld-chroma-decoder.pro  main.cpp  monodecoder.cpp  monodecoder.h  ntscdecoder.cpp  ntscdecoder.h  ntscfilter.cpp  ntscfilter.h  opticalflow.cpp  opticalflow.h  outputframe.h  outputwriter.cpp  outputwriter.h  palcolour.cpp  palcolour.h  palcombfilter.cpp  palcombfilter.h  paldecoder.cpp  paldecoder.h  rgb.cpp  rgb.h  rgbframe.h  sourcefield.cpp  sourcefield.h  transformntsc3d.cpp  (+12 more)
tools/ld-chroma-decoder/encoder/: CMakeLists.txt  encoder.cpp  encoder.h  encoder.pro  main.cpp  ntscencoder.cpp  ntscencoder.h  palencoder.cpp  palencoder.h
tools/ld-chroma-decoder/testfilter/: testfilter.cpp  testfilter.pro
tools/ld-disc-stacker/: CMakeLists.txt  README.md  diffdod.cpp  diffdod.h  ld-disc-stacker.pro  main.cpp  stacker.cpp  stacker.h  stackingpool.cpp  stackingpool.h
tools/ld-discmap/: CMakeLists.txt  README.md  discmap.cpp  discmap.h  discmapper.cpp  discmapper.h  frame.cpp  frame.h  ld-discmap.pro  logging.cpp  logging.h  main.cpp  sourceaudio.cpp  sourceaudio.h  vbimapper.cpp  vbimapper.h
tools/ld-dropout-correct/: CMakeLists.txt  README.md  correctorpool.cpp  correctorpool.h  dropoutcorrect.cpp  dropoutcorrect.h  ld-dropout-correct.pro  main.cpp
tools/ld-export-metadata/: CMakeLists.txt  README.md  audacity.cpp  audacity.h  closedcaptions.cpp  closedcaptions.h  csv.cpp  csv.h  ffmetadata.cpp  ffmetadata.h  ld-export-metadata.pro  main.cpp
tools/ld-ldf-reader/: CMakeLists.txt  README.md  ld-ldf-reader.c  ldfreader.cpp  ldfreader.h  main.cpp
tools/ld-lds-converter/: CMakeLists.txt  README.md  dataconverter.cpp  dataconverter.h  ld-lds-converter.pro  main.cpp
tools/ld-process-ac3/: .gitignore  CMakeLists.txt  README.md  example_usage.sh  logger.hpp
tools/ld-process-ac3/decode/: AC3Framer.hpp  CMakeLists.txt  Corrector.hpp  ac3_parsing.hpp  main.cpp
tools/ld-process-ac3/demodulate/: CMakeLists.txt  Demodulator.hpp  OneBitADC.hpp  Reclocker.hpp  Resampler.hpp  main.cpp
tools/ld-process-efm/: CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.ui  applicationicons.qrc  c1circ.cpp  c1circ.h  c2circ.cpp  c2circ.h  c2deinterleave.cpp  c2deinterleave.h  configuration.cpp  configuration.h  decodeaudio.cpp  decodeaudio.h  decodedata.cpp  decodedata.h  decodesubcode.cpp  decodesubcode.h  efmdecoder.cpp  efmdecoder.h  efmprocess.cpp  efmprocess.h  efmtof3frames.cpp  efmtof3frames.h  f1frame.cpp  f1frame.h  f1tosectors.cpp  f2frame.cpp  f2frame.h  f2framestoaudio.cpp  f2framestoaudio.h  f2tof1frames.cpp  f2tof1frames.h  f3frame.cpp  f3frame.h  f3framer.cpp  f3framer.h  f3framestosubcodeblocks.cpp  f3framestosubcodeblocks.h  (+25 more)
tools/ld-process-efm/Datatypes/: audio.cpp  audio.h  audiosampleframe.cpp  audiosampleframe.h  f1frame.cpp  f1frame.h  f2frame.cpp  f2frame.h  f3frame.cpp  f3frame.h  section.cpp  section.h  sector.cpp  sector.h  tracktime.cpp  tracktime.h
tools/ld-process-efm/Decoder/: c1circ.cpp  c1circ.h  c2circ.cpp  c2circ.h  c2deinterleave.cpp  c2deinterleave.h  efmtof3frames.cpp  efmtof3frames.h  f1frame.cpp  f1tosectors.cpp  f1tosectors.h  f2framestoaudio.cpp  f2framestoaudio.h  f2tof1frames.cpp  f2tof1frames.h  f3tof2frames.cpp  f3tof2frames.h  f3tosections.cpp  f3tosections.h  sectiontometa.cpp  sectiontometa.h  sector.h  sectorstodata.cpp  sectorstodata.h  sectorstometa.cpp  sectorstometa.h  (+1 more)
tools/ld-process-vbi/: CMakeLists.txt  README.md  biphasecode.cpp  biphasecode.h  closedcaption.cpp  closedcaption.h  decoderpool.cpp  decoderpool.h  fmcode.cpp  fmcode.h  ld-process-vbi.pro  main.cpp  vbicorrector.cpp  vbicorrector.h  vbidecoder.cpp  vbidecoder.h  vbilinedecoder.cpp  vbilinedecoder.h  vbiutilities.h  videoid.cpp  videoid.h  vitccode.cpp  vitccode.h  vitsanalyser.cpp  vitsanalyser.h  whiteflag.cpp  whiteflag.h
tools/ld-process-vits/: CMakeLists.txt  README.md  ld-process-vits.pro  main.cpp  processingpool.cpp  processingpool.h  vitsanalyser.cpp  vitsanalyser.h
(+767 files in other folders)
