[build-system]
requires = ["setuptools>=61", "setuptools_scm>=6.2", "wheel", "Cython", "numpy"]
# requires = ["setuptools>=61", "wheel", "Cython", "numpy"]
# build-backend = "setuptools.build_meta"

[project]
name = "vhs_decode"
description = "Software Decoder for raw rf captures of laserdisc, vhs and other analog video formats"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["laserdisc", "vhs", "video", "tape", "decoder"]
license = {file = "LICENSE"}
classifiers = [
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "numpy>=1.22","numba>=0.58.1","scipy>=1.10.1","samplerate", "static-ffmpeg", "cython", "soundfile", "sounddevice", "importlib_resources >= 5.0; python_version < '3.10'"
]
dynamic = ["version"]
# version = "0.2.1dev0"

[project.optional-dependencies]
hifi_gui = [ "PyQt5>=5.14.1" ]
hifi_gnuradio = [ "pyzmq" ]

[project.scripts]
ld-decode = "lddecode.main:main"
vhs-decode = "vhsdecode.main:main"
cvbs-decode = "cvbsdecode.main:main"
hifi-decode = "vhsdecode.hifi.main:main"

#[console_scripts]
# TODO: These should maybe be made modules too
#ld-cut = "ld-cut"
#cx-expander = "cx-expander"
#tbc-video-export = "tbc-video-export"

[project.urls]
Homepage = "https://www.domesday86.com"

[tool.setuptools_scm]
write_to = "vhsdecode/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["vhsdecode"]

[tool.setuptools.package-data]
vhs_decode = ["*.txt"]