[build-system]
requires = ["setuptools>=61", "setuptools-rust", "setuptools_scm>=6.2", "wheel", "Cython", "numpy"]
# requires = ["setuptools>=61", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "vhs_decode"
description = "Software Decoder for raw rf captures of laserdisc, vhs and other analog video formats"
readme = "README_pypi.md"
requires-python = ">=3.11"
keywords = ["laserdisc", "vhs", "video", "tape", "decoder"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "cython",
    "matplotlib",
    "noisereduce>=2.0.0",
    "numba>=0.59",
    "numpy>=1.24",
    "scipy>=1.11",
    "setproctitle",
    "sounddevice",
    "soundfile>=0.13.1",
    "soxr",
    "static-ffmpeg",
    "av",
]
dynamic = ["version"]
# version = "0.2.1dev0"

[project.optional-dependencies]
intel = [ "intel-cmplr-lib-rt", "icc_rt" ]
hifi_gui = [ "PyQt5>=5.14.1" ]
hifi_gui_qt6 = [ "PyQt6>=6.4.2" ]
# Can probably be depcretaded now since it's also an option in vhs-decode to use it.
hifi_gnuradio = [ "pyzmq" ]
gnuradio = [ "pyzmq" ]
test = [ "pytest>=7.0" ]

[project.scripts]
ld-decode = "lddecode.main:main"
ld-ldf-reader = "lddecode.ldf_reader:main"
ld-ldf-reader-py = "lddecode.ldf_reader:main"
ld-lds-reader = "lddecode.lds_reader:main"
vhs-decode = "vhsdecode.main:main"
cvbs-decode = "cvbsdecode.main:main"
hifi-decode = "vhsdecode.hifi.main:main"
filter-tune = "filter_tune.filter_tune:main"
decode-launcher = "vhsdecode.decode_launcher:main"

#[console_scripts]
# TODO: These should maybe be made modules too
#ld-cut = "ld-cut"
#cx-expander = "cx-expander"
#tbc-video-export = "tbc-video-export"

[project.urls]
Homepage = "https://www.domesday86.com"
Repository = "https://github.com/oyvindln/vhs-decode"
Documentation = "https://github.com/oyvindln/vhs-decode/wiki"
Issues = "https://github.com/oyvindln/vhs-decode/issues"

[tool.setuptools_scm]
write_to = "vhsdecode/_version.py"
local_scheme = "no-local-version"
# Restrict git describe/version parsing to real version tags (avoid tags like "rev4.0" breaking builds)
git_describe_command = "git describe --dirty --tags --long --match [0-9]* --match v[0-9]*"
tag_regex = '^(?:v)?(?P<version>\d+(?:\.\d+)*(?:(?:a|b|rc)\d*)?)$'

[tool.setuptools.package-data]
vhs_decode = ["*.txt"]

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "vhsd_rust"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
markers = [
    "integration: end-to-end decode tests requiring real RF data",
]

# Needed to prevent building for older macos versions not supported by rust - see https://cibuildwheel.pypa.io/en/stable/faq/#building-rust-wheels
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.12"
